style.css
/* 
Colors 

- #F7F7F7 (Wild Sand) - Background
- #191A1A (Woodsmoke) - Text
- #c22929 (Tall Poppy) - Accents
- #4795c9 (blue) - Buttons
- #ffa203 (orange) - Nav bar

 */

@font-face {
    font-family: custom;
    src: url(APHont.ttf);
}

* {
    margin: 0;
    padding: 0;
    
    font-family: custom
}

/* Navigation Bar */
header {
    background-color: #ffa203;
    height: 50;
    background-size: cover;
    background-position: center;
    margin-bottom: 25px;
}

header ul {
    float: right;
    list-style-type: none;
    margin-top: 17px;
    background-color: #ffa203;
}

header ul li {
    display: inline-block;
    background-color: #ffa203;
}

header ul li a {
    text-decoration: none;
    color: #28233C;
    background-color: #ffa203;
    padding: 5px 20px;
    border: 1px solid #28233C, transparent;
    font-size: 15px;
    margin-left: 10px;
    border-radius: 10px;
}

header ul li a:hover {
    background-color: #28233C;
    color: #ffa203;
}

header ul li.active a {
    background-color: #28233C;
    color: #ffa203;
}

.logo img {
    float: left;
    width: 150px;
    height: auto;
    margin-top: 10px;
}

.nav {
    max-width: 1200px;
    margin: auto;
}

/* Product Page */
.main {
    max-width: 1250px;
    margin: auto;
    margin-top: 40px;
}

.btns {
    outline: none;
    text-decoration: none;
    color: #28233C;
    background-color: #4795c9;
    color: #28233C;
    font-size: 20px;
    padding: 15px 20px;
    border: 1px solid #2f6488;
    cursor: pointer;
}

.btns:hover{
    background-color: #398ec6;
}

.info_section_hide {
    display: none;
 }

.info_section_show {
    border: 1px solid #bfbfbf transparent;
    padding: 10px 15px;
    margin-top: -1px;
    margin-bottom: 1px;
    color: #191A1A;
}

.product_image {
    width: 100%;
    height: auto;
}

.teams {
      position: relative;
      }

.description {
      position: absolute;
      bottom: 0;
      background-color: rgba(200, 200, 200, 0.85);
      opacity: 0;
      -webkit-transition: opacity .5s ease;
      transition: opacity .5s ease;
      }

.teams:hover .description {
      opacity:1;
        }

/*team page */
.our{ 
    text-align: center;
    margin-top: 20px;
    
}
.text-d{
    margin-left: 20px;   
}
table{
    border-spacing: 20px;
}
table p{
    margin-top: 20px;
}

table img {
    border-radius: 250px;
    overflow: hidden;
    width:200px;
    height:250px; 
}
.picture-left{
    float:left;
    overflow:hidden;
    border-radius:49%;
    width:200px;
    height:250px; 
}

.profiles{
    display : flex;
}
 
.paragraph-right {
  float:right;
  width:800px;
}
.profiles{
  border-radius: 25px;
  border: 2px solid #ffa203;
  padding: 20px;
  width: 1000px;
  height: 250px;
}
.profiles {
  position: relative;
  width: 1000px;
  height: 250px;
  background: #F7F7F7;
  border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
  box-shadow: 20px 20px rgba(0,0,0,.15);
  transition: all .4s ease;
}
.profiles:hover {
  border-radius: 25px;
  box-shadow: 10px 10px rgba(0,0,0,.25);
  background-color:#ffa203;
}
img{
	margin-right: 50px;"
}

